--- a/main.css
+++ b/main.css
@@ -1,2 +1,2 @@
-div{background-color: #772277;}
-.id{background-color: #444444;}
+body>div{background-color: #772277;}
+#specialCase{background-color: #444444;}
